--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRESTO1</title>
+    <title>TechVault</title>
     <!-- FONT AWESOME -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- BOOTSTRAP -->
@@ -15,11 +15,110 @@
 </head>
 
 <body>
+    <!-- ! Init Pre NavBar -->
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <div class="btn-group">
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Italiano
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Inglese</a></li>
+                    <li><a class="dropdown-item" href="#">Tedesco</a></li>
+                    <li><a class="dropdown-item" href="#">Francese</a></li>
+                    <li><a class="dropdown-item" href="#">Spagnolo</a></li>
+                </ul>
+            </div>
+            <div class="btn-group ms-auto">
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Assistenza
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Contatta un commerciale</a></li>
+                    <li><a class="dropdown-item" href="#">Contatta Assisstenza</a></li>
+                    <li><a class="dropdown-item" href="#">Guide</a></li>
+                </ul>
+            </div>
+            <span>Login</span>
+            <i class="fa-solid fa-user"></i>
+        </div>
+    </nav>
+
+
+
+    <!-- ! Fein Pre-NavBar -->
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <!-- Logo (Nome del sito) -->
+            <a class="navbar-brand" href="#">SellRapido</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Navbar Links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <!-- ^DropDown Servizi -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Servizi
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+                <!-- ^DropDown Integrazioni -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Integrazioni
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+                <button class="btn btn-outline" type="submit">Offerta</button>
+        </div>
+        </div>
+    </nav>
+    </div>
 
 
 
 
-    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
