--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -1,84 +1,63 @@
 /* ROOT */
 :root {
-    --blue: rgb(23, 0, 123);
-    --electric-indigo: rgb(106, 0, 244);
-    --violet: rgb(137, 0, 242);
-    --veronica: rgb(161, 0, 242);
-    --veronica-2: rgb(177, 0, 232);
-    --electric-purple: rgb(188, 0, 221);
-    --steel-pink: rgb(209, 0, 209);
-    --steel-pink-2: rgb(219, 0, 182);
-    --hollywood-cerise: rgb(229, 0, 164);
-    --magenta: rgb(242, 0, 137);
-
-    /* General theme colors */
-    --navbar-bg: var(--electric-indigo);
-    --navbar-link: var(--violet);
-    --navbar-link-hover: var(--steel-pink-2);
-    --button-bg: var(--hollywood-cerise);
-    --button-hover-bg: var(--magenta);
+    --dark-gray: #333333;
+    --gray: #808080;
+    --light-gray: #D3D3D3;
+    --white: #ffffff;
+    --card: #FAEBD7;
+    --navbar-bg: #2F2F2F;
+    --navbar-link: #ffffff;
+    --navbar-link-hover: #D3D3D3;
+    --button-bg: #FF5733;
+    --button-hover-bg: #C70039;
     --text-color: #ffffff;
+    --acctext: #F7EF43;
 }
 
-/* Stile Body */
+/* Bootstrap Icons */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+
+/* Social Icons */
+bi bi-linkedin:hover {
+    transition: color 0.3s ease-in-out;
+}
+
+/* Body styles */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: black;
-    padding-top: 70px; 
+    background: linear-gradient(180deg, #bbbbbb, #222222);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
 }
 
-/* Stile sections */
-section {
-    display: block;
-    unicode-bidi: isolate;
-    padding: 0;
-    justify-content: center;
-}
-/* NavBar Container */
+
+/* Navbar Wrapper */
 .navbar-wrapper {
     position: sticky;
     top: 0;
-    z-index: 1050; 
-    background-color: #fff; 
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
-    padding: 20px 20px;
-    border-radius: 60px;
-    transition: transform 0.3s ease; 
-    width: 100%;
-}
-/* Scaling della Navbar */
-.navbar-wrapper:hover {
-    transform: scale(1.02); 
-    transform-origin: center;
-}
-
-/* Navbar */
-.navbar {
-    width: 80%; 
-    max-width: 1200px;
-    margin: 0 auto; 
-    padding: 10px 0;
-}
-
-/* Navbar Logo */
-.navbar-brand {
-    justify-content: flex-start;
-    margin: 0;
+    z-index: 1050;
+    background-color: var(--navbar-bg);
+    padding: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    justify-content: center;
+    align-items: center;
 }
 
 /* Navbar Links */
 .navbar-nav .nav-link {
     color: var(--navbar-link);
-    font-size: 12px;
+    font-size: 14px;
     padding: 10px;
-    margin: 8px; 
+    margin: 0 10px;
     text-transform: uppercase;
     transition: color 0.3s ease-in-out;
+    justify-content: space-evenly;
 }
 
-/* Navbar hover effect */
 .navbar-nav .nav-link:hover {
     color: var(--navbar-link-hover);
 }
@@ -90,17 +69,139 @@ section {
 
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='%23FFFFFF' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-    cursor: pointer;
 }
 
-/* Button Styles */
-.btn {
-    background-color: var(--button-bg);
-    color: var(--text-color);
-    border: none;
-    transition: background-color 0.3s ease-in-out;
+/* Main Section  */
+.main-section {
+    padding: 60px 0;
+    text-align: center;
 }
 
-.btn:hover {
-    background-color: var(--button-hover-bg);
+/* Card Section */
+.cards-section {
+    padding: 40px 0;
 }
+
+/* Card Styles */
+.card {
+    background-color: var(--antique-white);
+    border: 1px solid var(--gray);
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.card-img-container {
+    position: relative;
+    overflow: hidden;
+    background-color: #222222;
+}
+
+.card-img-top {
+    width: 100%;
+    height: auto;
+    display: block;
+    transition: transform 0.3s ease-in-out;
+}
+
+.card-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color: white;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+
+.card:hover .card-overlay {
+    opacity: 1;
+}
+
+.card-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.card-text {
+    font-size: 16px;
+}
+
+.prephix {
+    font-weight: bold;
+    color: var(--acctext);
+}
+
+.phone-number span {
+    font-weight: bold;
+}
+
+.acctext-i{
+    color: var(--acctext);
+    font-size: 20px;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.acctext{
+    color: var(--acctext);
+}
+
+.bg-dark{
+color: var(--light-gray);
+}
+
+.col-md-6 right-column{
+    padding: 20px;
+    color: #F7EF43;
+}
+
+
+.col-md-6 left-column{
+    padding: 20px;
+    color:#F7EF43;
+}
+
+.quest span {
+font-size: 30px;
+font-weight: 100;
+color: #F7EF43;
+}
+
+.laptop-wrapper{
+
+}
+.laptop-full{
+width: 800px;
+height: 440px;
+
+border-radius: 16px;
+position: relative;
+box-shadow: 0 0px 30px;
+display: flex;
+justify-content: center;
+align-items: center;
+overflow: hidden;
+}
+
+.laptop-screen {
+    color: #ffffff;
+    padding-bottom: 8px;
+}
+
+.laptop-keyb {
+    background-color: #444444;  
+    width: 500px;
+    height: 30px;
+}
+
